Pievienota gaiša/tumša tēmas pārslēgšana

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Theme Switch Button -->
+    <div class="theme-switch-wrapper">
+        <input type="checkbox" id="theme-switch" class="theme-switch-input" />
+        <label for="theme-switch" class="theme-switch-label">
+            <span class="theme-switch-icon sun">☀️</span>
+            <span class="theme-switch-slider"></span>
+            <span class="theme-switch-icon moon">🌙</span>
+        </label>
+    </div>
     <header>
         <div class="container">
             <h1>🍕 O! Pica</h1>
