Koriģēts script defer atribūts

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🍕 O! Pica - Pasūtiet savu mīļoto picu</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header>
@@ -59,6 +60,5 @@
         <p>&copy; 2026 O! Pica. Visas tiesības rezervētas. 🍕</p>
     </footer>
 
-    <script src="script.js"></script>
 </body>
 </html>
